<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "Free Unit Circle">
    <!ENTITY author "Dakota Barron">
    ]>

<resources>
    <string name="app_name">Free Unit Circle</string>

    <string name="degrees_label">DEG:</string>
    <string name="radians_label">RAD:</string>
    <string name="cosine_label">COS:</string>
    <string name="sine_label">SIN:</string>
    <string name="tangent_label">TAN:</string>
    <string name="tangent_undefined_text">N/A</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="pref_dark_theme_key">pref_dark_theme</string>
    <string name="pref_dark_theme_title">Use Dark Theme</string>

    <string name="pref_angle_sign_key">pref_angle_sign</string>
    <string name="pref_angle_sign_title">Sign of angles</string>
    <string name="pref_angle_sign_value_all_positive">all_positive</string>
    <string name="pref_angle_sign_value_split">split_top_bottom</string>
    <string name="pref_angle_sign_value_all_negative">all_negative</string>
    <string name="pref_angle_sign_default">@string/pref_angle_sign_value_all_positive</string>

    <string name="about_screen_line_2">Copyright \u00A9 2017, Dakota Barron</string>

    <string name="title_changing_angle_value">Changing Angle Value</string>
    <string name="changing_angle_value_1">There are several ways by which you can change the angle value currently showing on the unit circle:</string>
    <string name="changing_angle_value_2">1. Touch or drag with your finger or other pointing device on the unit circle itself</string>
    <string name="changing_angle_value_3">2. Tap on the current angle\'s numeric value in either the degrees or radians box to enter an angle value via keyboard</string>
    <string name="changing_angle_value_4">3. Tap on the left/right arrows to cycle through common \"special angles\" whose radian values are expressed in terms of \u03C0</string>

    <string name="title_changing_angle_sign">Changing Sign of Angles</string>
    <string name="changing_angle_sign_1">By default, all angle values are shown as positive sign. For example, the positive value 330 degrees will show instead of
        its negative equivalent of -30 degrees</string>
    <string name="changing_angle_sign_2">If you would prefer that some or all angles show their negative values instead of the positive values, you can go back to the
    main screen and click on the settings icon in the top right of the toolbar. You can then change the angle sign setting by clicking on \"Sign of angles\" in the settings menu</string>
    <string name="changing_angle_sign_3">Within the angle sign settings menu, you will have the following options:</string>
    <string name="changing_angle_sign_4">"<b>All positive:</b> all angles\' degree and radian values will be shown as positive sign (this is the default)"</string>
    <string name="changing_angle_sign_5">"<b>Top positive; Bottom negative:</b> angles with degree value between 0&#8211;180 (top half of unit circle) will show as positive sign and angles with degree value greater than 180 (bottom half of unit circle) will show as negative sign"</string>
    <string name="changing_angle_sign_6">"<b>All negative:</b> all angles\' degree and radian values will be shown as negative sign"</string>

    <string name="title_about">About</string>
    <string name="about_1">Developed on the Debian operating system</string>
    <string name="about_2">"For questions, bug reports, and support please contact: drb@dakotabarron.com"</string>

    <string name="title_third_party">Third Party Software</string>
    <string name="third_party_1">Free Unit Circle uses the following third party software:</string>
    <string name="third_party_2">"<b>sdp</b> copyright \u00A9 Intuit Inc., licensed under the MIT license"</string>
    <string name="third_party_3">"<b>ssp</b> copyright \u00A9 Intuit Inc., licensed under the MIT license"</string>
    <string name="third_party_click_here">Click here to view third party licenses</string>
    <string name="version">Version 1.0</string>

    <string name="third_party_top_bar_line_2">Third Party Software Licenses</string>
    <string name="third_party_disclosure">Free Unit Circle uses the following third party software:</string>
    <string name="sdp_title">sdp</string>
    <string name="sdp_text_1">MIT license</string>
    <string name="sdp_text_2">Copyright &#169; 2013 &#8211; 2015 Intuit Inc.</string>
    <string name="sdp_text_3">Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:</string>
    <string name="sdp_text_4">The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.</string>
    <string name="sdp_text_5">THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>

    <string name="ssp_title">ssp</string>
    <string name="ssp_text_1">MIT license</string>
    <string name="ssp_text_2">Copyright &#169; 2013 &#8211; 2015 Intuit Inc.</string>
    <string name="ssp_text_3">Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:</string>
    <string name="ssp_text_4">The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.</string>
    <string name="ssp_text_5">THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
</resources>
