<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dakotabarron.freeunitcircle.ThirdPartyLicensesActivity">

    <LinearLayout
        android:id="@+id/topTitle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        android:orientation="vertical"
        android:background="@color/colorAppBarLightTheme"
        android:paddingTop="@dimen/space_top_bottom_about_screen_top_title"
        android:paddingBottom="@dimen/space_top_bottom_about_screen_top_title"
        android:paddingLeft="@dimen/space_rest_about_screen"
        android:paddingRight="@dimen/space_rest_about_screen">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="@dimen/top_title_text_size"
            android:textColor="@color/colorTextLightTheme"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_party_top_bar_line_2"
            android:gravity="center"
            android:textSize="@dimen/top_title_text_size"
            android:textColor="@color/colorTextLightTheme"
            android:textStyle="bold"
            />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingLeft="@dimen/space_rest_about_screen"
        android:paddingRight="@dimen/space_rest_about_screen">

        <LinearLayout
            android:id="@+id/textViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space_rest_about_screen">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_party_disclosure"
                android:layout_marginTop="@dimen/space_before_after_each_section_title"
                android:layout_marginBottom="@dimen/space_before_after_each_section_title"
                android:textSize="@dimen/within_section_text_size"
                android:textColor="@color/colorTextLightTheme"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_sdp"
                android:text="@string/sdp_title"
                android:layout_marginBottom="@dimen/space_before_after_each_section_title"
                android:textStyle="bold"
                android:textSize="@dimen/section_title_text_size"
                android:gravity="center"
                android:textColor="@color/colorTextLightTheme"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sdp_text_1"
                android:layout_marginBottom="@dimen/space_within_each_section"
                android:textSize="@dimen/within_section_text_size"
                android:textColor="@color/colorTextLightTheme"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sdp_text_2"
                android:layout_marginBottom="@dimen/space_within_each_section"
                android:textSize="@dimen/within_section_text_size"
                android:textColor="@color/colorTextLightTheme"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sdp_text_3"
                android:layout_marginBottom="@dimen/space_within_each_section"
                android:textSize="@dimen/within_section_text_size"
                android:textColor="@color/colorTextLightTheme"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sdp_text_4"
                android:layout_marginBottom="@dimen/space_within_each_section"
                android:textSize="@dimen/within_section_text_size"
                android:textColor="@color/colorTextLightTheme"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sdp_text_5"
                android:layout_marginBottom="@dimen/space_before_after_each_section_title"
                android:textSize="@dimen/within_section_text_size"
                android:textColor="@color/colorTextLightTheme"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_ssp"
                android:text="@string/ssp_title"
                android:layout_marginBottom="@dimen/space_before_after_each_section_title"
                android:textStyle="bold"
                android:textSize="@dimen/section_title_text_size"
                android:gravity="center"
                android:textColor="@color/colorTextLightTheme"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ssp_text_1"
                android:layout_marginBottom="@dimen/space_within_each_section"
                android:textSize="@dimen/within_section_text_size"
                android:textColor="@color/colorTextLightTheme"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ssp_text_2"
                android:layout_marginBottom="@dimen/space_within_each_section"
                android:textSize="@dimen/within_section_text_size"
                android:textColor="@color/colorTextLightTheme"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ssp_text_3"
                android:layout_marginBottom="@dimen/space_within_each_section"
                android:textSize="@dimen/within_section_text_size"
                android:textColor="@color/colorTextLightTheme"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ssp_text_4"
                android:layout_marginBottom="@dimen/space_within_each_section"
                android:textSize="@dimen/within_section_text_size"
                android:textColor="@color/colorTextLightTheme"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ssp_text_5"
                android:textSize="@dimen/within_section_text_size"
                android:textColor="@color/colorTextLightTheme"
                />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
